Update /users endpoints
Completed User logic

Update authentication

Add DB connections
