# src/swagger.json
@@ -187,7 +187,17 @@
 				"additionalProperties": false,
 				"example": {
 					"status": 400,
-					"error": {}
+					"error": {
+						"message": "Error description.",
+						"fields": [
+							{
+								"name": {
+									"message": "Reason or description.",
+									"value": "Any value or undefined."
+								}
+							}
+						]
+					}
 				}
 			},
 			"AuthenticationErrorResponse": {
@@ -613,6 +623,10 @@
 					"error": {}
 				}
 			},
+			"UUID": {
+				"type": "string",
+				"format": "uuid"
+			},
 			"LoginResult": {
 				"properties": {
 					"status": {
@@ -625,7 +639,7 @@
 					"data": {
 						"properties": {
 							"userId": {
-								"type": "string"
+								"$ref": "#/components/schemas/UUID"
 							}
 						},
 						"required": [
@@ -639,13 +653,7 @@
 					"data"
 				],
 				"type": "object",
-				"additionalProperties": false,
-				"example": {
-					"status": 200,
-					"data": {
-						"userId": "424c9011-81e1-4ad7-818f-802f9a9bc9ce"
-					}
-				}
+				"additionalProperties": false
 			},
 			"Username": {
 				"type": "string",
@@ -673,24 +681,26 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"USERS_NAME": {
+				"type": "string",
+				"example": "Alice"
+			},
 			"Role": {
 				"enum": [
-					"admin",
+					"basic",
 					"seller",
-					"basic"
+					"manager",
+					"admin"
 				],
 				"type": "string"
 			},
 			"UserFullInfo": {
 				"properties": {
 					"userId": {
-						"type": "string"
-					},
-					"username": {
-						"$ref": "#/components/schemas/Username"
+						"$ref": "#/components/schemas/UUID"
 					},
 					"name": {
-						"type": "string"
+						"$ref": "#/components/schemas/USERS_NAME"
 					},
 					"role": {
 						"$ref": "#/components/schemas/Role"
@@ -706,22 +716,13 @@
 				},
 				"required": [
 					"userId",
-					"username",
 					"name",
 					"role",
 					"createdAt",
 					"updatedAt"
 				],
 				"type": "object",
-				"additionalProperties": false,
-				"example": {
-					"userId": "d3f73171-304e-48cd-a93f-0602cd2322ed",
-					"username": "user000",
-					"name": "Alice",
-					"role": "admin",
-					"createdAt": "2022-08-12T23:55:57.972Z",
-					"updatedAt": "2022-08-12T23:55:57.972Z"
-				}
+				"additionalProperties": false
 			},
 			"GetUsersResult": {
 				"description": "JSON response format for the \"GET /users\" endpoint.",
@@ -735,7 +736,7 @@
 					},
 					"data": {
 						"properties": {
-							"users": {
+							"list": {
 								"items": {
 									"$ref": "#/components/schemas/UserFullInfo"
 								},
@@ -743,7 +744,7 @@
 							}
 						},
 						"required": [
-							"users"
+							"list"
 						],
 						"type": "object"
 					}
@@ -755,9 +756,53 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Email": {
-				"type": "string",
-				"format": "email"
+			"UserProfile": {
+				"properties": {
+					"userId": {
+						"$ref": "#/components/schemas/UUID"
+					},
+					"name": {
+						"$ref": "#/components/schemas/USERS_NAME"
+					}
+				},
+				"required": [
+					"userId",
+					"name"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"GetSellersResult": {
+				"description": "JSON response format for the \"GET /users\" endpoint.",
+				"properties": {
+					"status": {
+						"type": "number",
+						"enum": [
+							200
+						],
+						"nullable": false
+					},
+					"data": {
+						"properties": {
+							"list": {
+								"items": {
+									"$ref": "#/components/schemas/UserProfile"
+								},
+								"type": "array"
+							}
+						},
+						"required": [
+							"list"
+						],
+						"type": "object"
+					}
+				},
+				"required": [
+					"status",
+					"data"
+				],
+				"type": "object",
+				"additionalProperties": false
 			},
 			"PostUsersResult": {
 				"description": "JSON response format for the \"POST /users\" endpoint.",
@@ -770,32 +815,7 @@
 						"nullable": false
 					},
 					"data": {
-						"properties": {
-							"user": {
-								"properties": {
-									"role": {
-										"$ref": "#/components/schemas/Role"
-									},
-									"email": {
-										"$ref": "#/components/schemas/Email"
-									},
-									"name": {
-										"type": "string"
-									},
-									"userId": {
-										"type": "string"
-									}
-								},
-								"required": [
-									"role",
-									"email",
-									"name",
-									"userId"
-								],
-								"type": "object"
-							}
-						},
-						"type": "object"
+						"$ref": "#/components/schemas/UserProfile"
 					}
 				},
 				"required": [
@@ -803,59 +823,28 @@
 					"data"
 				],
 				"type": "object",
-				"additionalProperties": false,
-				"example": {
-					"status": 201,
-					"data": {
-						"created": {
-							"userId": "user-1",
-							"name": "Alice",
-							"email": "alice@mail.com",
-							"role": "none"
-						}
-					}
-				}
+				"additionalProperties": false
 			},
 			"CreateUserParams": {
 				"description": "JSON request format to create a new user.",
 				"properties": {
-					"name": {
-						"type": "string"
+					"username": {
+						"$ref": "#/components/schemas/Username"
 					},
-					"email": {
-						"$ref": "#/components/schemas/Email"
+					"password": {
+						"$ref": "#/components/schemas/Password"
+					},
+					"name": {
+						"$ref": "#/components/schemas/USERS_NAME"
 					}
 				},
 				"required": [
-					"name",
-					"email"
-				],
-				"type": "object",
-				"additionalProperties": false,
-				"example": {
-					"name": "Alice",
-					"email": "alice@mail.com"
-				}
-			},
-			"UserProfile": {
-				"properties": {
-					"userId": {
-						"type": "string"
-					},
-					"name": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"userId",
+					"username",
+					"password",
 					"name"
 				],
 				"type": "object",
-				"additionalProperties": false,
-				"example": {
-					"userId": "09d6e02e-67c0-418f-bd0d-19926f554a71",
-					"name": "Alice"
-				}
+				"additionalProperties": false
 			},
 			"GetUserProfileResult": {
 				"description": "JSON response format for the \"GET /users/{userId}\" endpoint.",
@@ -868,15 +857,7 @@
 						"nullable": false
 					},
 					"data": {
-						"properties": {
-							"user": {
-								"$ref": "#/components/schemas/UserProfile"
-							}
-						},
-						"required": [
-							"user"
-						],
-						"type": "object"
+						"$ref": "#/components/schemas/UserProfile"
 					}
 				},
 				"required": [
@@ -897,62 +878,27 @@
 						"nullable": false
 					},
 					"data": {
-						"properties": {
-							"user": {
-								"properties": {
-									"email": {
-										"$ref": "#/components/schemas/Email"
-									},
-									"name": {
-										"type": "string"
-									},
-									"userId": {
-										"type": "string"
-									}
-								},
-								"required": [
-									"email",
-									"name",
-									"userId"
-								],
-								"type": "object"
-							}
-						},
-						"type": "object"
+						"$ref": "#/components/schemas/UserProfile"
 					}
 				},
 				"required": [
-					"status",
-					"data"
+					"status"
 				],
 				"type": "object",
-				"additionalProperties": false,
-				"example": {
-					"status": 200,
-					"data": {
-						"user": {
-							"userId": "user-1",
-							"name": "Alice",
-							"email": "alice@mail.com"
-						}
-					}
-				}
+				"additionalProperties": false
 			},
 			"UpdateUserProfileParams": {
-				"description": "JSON request format to update an existing user's profile.",
+				"description": "JSON request format to update an existing user.",
 				"properties": {
 					"name": {
-						"type": "string"
+						"$ref": "#/components/schemas/USERS_NAME"
 					}
 				},
 				"required": [
 					"name"
 				],
 				"type": "object",
-				"additionalProperties": false,
-				"example": {
-					"name": "Alice"
-				}
+				"additionalProperties": false
 			},
 			"GetUserFullInfoResult": {
 				"description": "JSON response format for the \"GET /users/{userId}/fullinfo\" endpoint.",
@@ -965,15 +911,7 @@
 						"nullable": false
 					},
 					"data": {
-						"properties": {
-							"user": {
-								"$ref": "#/components/schemas/UserFullInfo"
-							}
-						},
-						"required": [
-							"user"
-						],
-						"type": "object"
+						"$ref": "#/components/schemas/UserFullInfo"
 					}
 				},
 				"required": [
@@ -994,57 +932,20 @@
 						"nullable": false
 					},
 					"data": {
-						"properties": {
-							"user": {
-								"properties": {
-									"role": {
-										"$ref": "#/components/schemas/Role"
-									},
-									"email": {
-										"$ref": "#/components/schemas/Email"
-									},
-									"name": {
-										"type": "string"
-									},
-									"userId": {
-										"type": "string"
-									}
-								},
-								"required": [
-									"role",
-									"email",
-									"name",
-									"userId"
-								],
-								"type": "object"
-							}
-						},
-						"type": "object"
+						"$ref": "#/components/schemas/UserFullInfo"
 					}
 				},
 				"required": [
-					"status",
-					"data"
+					"status"
 				],
 				"type": "object",
-				"additionalProperties": false,
-				"example": {
-					"status": 200,
-					"data": {
-						"user": {
-							"userId": "user-1",
-							"name": "Alice",
-							"email": "alice@mail.com",
-							"role": "admin"
-						}
-					}
-				}
+				"additionalProperties": false
 			},
 			"UpdateUserFullInfoParams": {
 				"description": "JSON request format to update an existing user's details.",
 				"properties": {
 					"name": {
-						"type": "string"
+						"$ref": "#/components/schemas/USERS_NAME"
 					},
 					"role": {
 						"$ref": "#/components/schemas/Role"
@@ -1060,7 +961,7 @@
 		},
 		"securitySchemes": {
 			"jwt": {
-				"type": "api_key",
+				"type": "apiKey",
 				"in": "cookie",
 				"name": "auth_token"
 			}
@@ -1109,7 +1010,7 @@
 				"security": [
 					{
 						"jwt": [
-							"admin"
+							"manager"
 						]
 					}
 				],
@@ -1191,7 +1092,7 @@
 				"security": [
 					{
 						"jwt": [
-							"admin"
+							"manager"
 						]
 					}
 				],
@@ -1354,7 +1255,7 @@
 				"security": [
 					{
 						"jwt": [
-							"admin"
+							"manager"
 						]
 					}
 				],
@@ -1458,7 +1359,7 @@
 				"security": [
 					{
 						"jwt": [
-							"admin"
+							"manager"
 						]
 					}
 				],
@@ -1692,7 +1593,7 @@
 			"post": {
 				"operationId": "Logout",
 				"responses": {
-					"200": {
+					"204": {
 						"description": "Logout successfull."
 					}
 				},
@@ -1782,7 +1683,7 @@
 						}
 					},
 					"400": {
-						"description": "Bad Request",
+						"description": "",
 						"content": {
 							"application/json": {
 								"schema": {
@@ -1808,6 +1709,36 @@
 						}
 					}
 				}
+			}
+		},
+		"/users/sellers": {
+			"get": {
+				"operationId": "GetSellers",
+				"responses": {
+					"200": {
+						"description": "Successfully returned a list of users with the 'seller' role.",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/GetSellersResult"
+								}
+							}
+						}
+					}
+				},
+				"description": "Only retrieves users with the role 'seller'.",
+				"summary": "Retrieve a list of users with the 'seller' role. You may specify search parameters.",
+				"tags": [
+					"Users"
+				],
+				"security": [
+					{
+						"jwt": [
+							"manager"
+						]
+					}
+				],
+				"parameters": []
 			}
 		},
 		"/users/{userId}": {
@@ -1854,7 +1785,7 @@
 						"name": "userId",
 						"required": true,
 						"schema": {
-							"type": "string"
+							"$ref": "#/components/schemas/UUID"
 						}
 					}
 				]
@@ -1927,7 +1858,7 @@
 						"name": "userId",
 						"required": true,
 						"schema": {
-							"type": "string"
+							"$ref": "#/components/schemas/UUID"
 						}
 					}
 				],
@@ -1968,7 +1899,7 @@
 						}
 					}
 				},
-				"summary": "Retrieve the user's complete information.",
+				"summary": "Retrieve the user's information.",
 				"tags": [
 					"Users"
 				],
@@ -1986,7 +1917,7 @@
 						"name": "userId",
 						"required": true,
 						"schema": {
-							"type": "string"
+							"$ref": "#/components/schemas/UUID"
 						}
 					}
 				]
@@ -1995,7 +1926,7 @@
 				"operationId": "PatchUserFullInfo",
 				"responses": {
 					"200": {
-						"description": "Successfully updated the user details.",
+						"description": "Successfully updated the user's information.",
 						"content": {
 							"application/json": {
 								"schema": {
@@ -2028,9 +1959,19 @@
 								}
 							}
 						}
+					},
+					"404": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/NotFoundErrorResponse"
+								}
+							}
+						}
 					}
 				},
-				"summary": "Update user's role.",
+				"summary": "Update user's information.",
 				"tags": [
 					"Users"
 				],
@@ -2048,7 +1989,7 @@
 						"name": "userId",
 						"required": true,
 						"schema": {
-							"type": "string"
+							"$ref": "#/components/schemas/UUID"
 						}
 					}
 				],
